--- a/installer/keypad.config
+++ b/installer/keypad.config
@@ -1,3 +1,17 @@
 [xbmc]
 host=localhost
 port=9777
+
+[gpiokeymapping]
+key1=19,20
+key2=19,26
+key3=19,16
+key4=13,20
+key5=13,26
+key6=13,16
+key7=12,20
+key8=05,12
+key9=12,16
+key0=21,06
+keys=06,20
+keyh=08,07
