--- a/installer/keypad.config
+++ b/installer/keypad.config
@@ -2,30 +2,28 @@
 host=localhost
 port=9777
 
-#GPIO Mapping
 [gpiokeymapping]
-;key1=19,20
-;key2=19,26
-;key3=19,16
-;key4=13,20
-;key5=13,26
-;key6=13,16
-;key7=12,20
-;key8=05,12
-;key9=12,16
-;key0=21,06
-;keys=06,20
-;keyh=08,07
-
-key1 = 13,20
-key2 = 13,26
-key3 = 13,16
-key4 = 12,20
-key5 = 12,26
-key6 = 12,16
-key7 = 06,20
-key8 = 06,05
-key9 = 06,16
-key0 = 13,07
-keys = 07,20
-keyh = 21,08    
+# 1
+plus=19,20
+# 2
+up=19,26
+# 3
+3=19,16
+# 4
+left=13,20
+# 5
+enter=13,26
+# 6
+right=13,16
+# 7
+minus=12,20
+# 8
+down=12,5
+# 9
+space=12,16
+# 0
+esc=6,21
+# *
+backspace=6,20
+# #
+a=7,8
